# crbg-api-foundation

./: .gitignore  CLAUDE.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  smartbear-governance-enforcement-context.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/: aws-lambda-deployment.md  aws-lambda-handoff.md  aws-lambda-lite.md  aws-lambda-quickstart.md  aws-lambda-runbook.md  aws-lambda-walkthrough.md  implementation-context.md  installation.md  reports-vdi-handoff.md  reports.md  run-commands.md  runbook.md  troubleshooting.md
programdocs+communications/: email-draft.md  format.md
programdocs+communications/communications/comms-strategy/: 00-comms-strategy-overview.md  01-phase-sequence.md  02-message-templates.md  INDEX.md
programdocs+communications/program-docs/: INDEX.md
programdocs+communications/program-docs/governance-hub/foundational/: 00-program-overview.md  01-key-concepts-glossary.md  02-how-governance-works.md  03-guiding-principles.md  04-governance-charter.md
programdocs+communications/program-docs/governance-hub/operational/: 10-rules-catalogue.md  11-self-service-validation-guide.md  12-definition-of-done.md  13-enforcement-timeline.md  14-exception-waiver-process.md  15-top-violations-playbook.md  16-faq.md  17-per-team-report.md  18-support-model.md
projects/reports/: README.md  _lib.py  build-lambda-zip.sh  generate_executive_report.py  generate_pdf_reports.py  generate_platform_report.py  governance-data-gap-bridging-plan.md  governance-reports-spec-v2.md  lambda_handler.py  requirements-pdf.txt
projects/reports/sample-output/: executive-report.html
projects/reports/sample-output/platform-report/: findings.csv  index.html
projects/swagger-studio-ruleset/: README.md
projects/swagger-studio-ruleset/python/: .envrc  README.md  pyproject.toml  requirements.txt
projects/swagger-studio-ruleset/python/src/swagger_studio_ruleset_publisher/: __init__.py  __main__.py  _http.py  activator.py  cli.py  config.py  deleter.py  lister.py  logging_setup.py  packager.py  puller.py
projects/swagger-studio-ruleset/python/src/swagger_studio_ruleset_publisher/publishers/: __init__.py  base.py  cli_publisher.py  rest_publisher.py
projects/swagger-studio-ruleset/python/tests/: test_activator.py  test_cli.py  test_packager.py
projects/swagger-studio-ruleset/ruleset/: spectral.yaml
projects/swagger-studio-ruleset/ruleset-owasp/: spectral.yaml
projects/swagger-studio-ruleset/ruleset-owasp/rules/: owasp-api2-operation-security-defined.yaml
projects/swagger-studio-ruleset/typescript/: README.md  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json
projects/swagger-studio-scanner/: .env.example  README.md
projects/swagger-studio-scanner/python/: .envrc  Dockerfile.lambda  README.md  pyproject.toml  requirements.txt
projects/swagger-studio-scanner/python/output/: findings.csv  scan.html  scan.json
projects/swagger-studio-scanner/python/src/swagger_studio_scanner/: __init__.py  __main__.py  cli.py  client.py  config.py  lambda_handler.py  logging_setup.py  models.py  pareto.py  parsers.py  probe.py  scanner.py
projects/swagger-studio-scanner/python/src/swagger_studio_scanner/reports/: __init__.py  csv_writer.py  html_writer.py  json_writer.py
projects/swagger-studio-scanner/python/src/swagger_studio_scanner/reports/templates/: scan.html.j2
projects/swagger-studio-scanner/python/tests/: test_client_parsers.py  test_pareto.py  test_parsers.py  test_reports.py  test_scanner.py  test_smoke.py
projects/swagger-studio-scanner/samples/: README.md  bad-petstore.yaml  good-petstore.yaml  push_samples.sh
projects/swagger-studio-scanner/typescript/: README.md  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
tools/: build-lambda-zips.ps1  build-lambda-zips.sh  build-scanner-layer.sh  deploy-lambda-lite.sh  diagnose-ssl.py  html-to-pdf.py  package-lambda-lite.ps1  package-lambda-lite.sh  package-lambda.ps1  package-lambda.sh  package-reports-review.ps1  package-reports-review.sh  run-lambda-lite.sh
(+29 files in other folders)
