[project]
name = "swagger-studio-scanner"
version = "0.1.0"
description = "Org-wide non-conformance scanner for SmartBear Swagger Studio."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "API Foundation Platform Team" }]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
scanner = "swagger_studio_scanner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swagger_studio_scanner"]

# --- Ruff ---------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, B = bugbear, UP = pyupgrade,
# SIM = simplify, RUF = ruff-native, N = pep8-naming, ANN = annotations,
# TID = tidy-imports, PTH = pathlib, S = bandit (security).
select = [
    "E", "W", "F", "I", "B", "UP", "SIM", "RUF",
    "N", "ANN", "TID", "PTH", "S",
]
ignore = [
    "ANN401",  # allow Any in narrowly-typed adapters
    "S101",    # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy ---------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# --- pytest -------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/swagger_studio_scanner"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
